fix style bugs on mobile devices

--- a/public/assets/styles/page_style.css
+++ b/public/assets/styles/page_style.css
@@ -2,7 +2,7 @@
     width: 100%;
     height : 100%;
     text-align: center;
-    background:#f6f9f2;
+    background:#fcfcf6;
     font-family: Helvetica, 'Hiragino Sans GB', 'Microsoft Yahei', '微软雅黑', Arial, sans-serif;
 }
 .index-img-container {
@@ -29,9 +29,7 @@
     height:auto;
     margin-left:auto;
     margin-right:auto;
-    padding-left:6px;
-    padding-right:6px;
-    padding-bottom: 3px;
+    padding:3px 6px 3px 6px;
     font-size: 10px;
     color:#ffffff;
     background-color:#a98955;
@@ -40,7 +38,7 @@
     font-size : 32px;
     color : #424242;
     text-align: center;
-    width : 80%;
+    width : 100%;
     height:17%;
     overflow: hidden;
     margin-top:10%;
@@ -52,7 +50,7 @@
     color : #666666;
     height : 24%;
     overflow: hidden;
-    width : 90%;
+    width : 100%;
     text-align: center;
     margin-left:auto;
     margin-right:auto;
